Fixed mobile nav, social alignment, prettified.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-/* 
+/*
+Fonts:
 Metrophobic (only 400)
 Open Sans
 Source Sans Pro (weird capital Q)
@@ -9,8 +10,7 @@ body {
 	font-weight: 400;
 }
 
-body:after {
-	/* pre-load hover images */
+body:after {	/* pre-load hover images */
 	display: none;
 	content: url(../media/nucleo-social-icons/svg/social-1_logo-youtube.svg) url(../media/nucleo-social-icons/svg/social-1_logo-facebook.svg) url(../media/nucleo-social-icons/svg/social-1_logo-twitter.svg);
 }
@@ -18,90 +18,6 @@ body:after {
 .align-right {
 	text-align: right;
 }
-
-/*.navbar {
-	min-height: 100px;
-	line-height: 100px;
-	vertical-align: center;
-}
-
-.navbar-brand {
-	font-size: 70px;
-}
-
-.navbar-logo {
-	height: 100px;
-	display: inline-block;
-	padding: 0 0 0 25px;
-}
-
-.navbar-nav li a {
-    padding:0 15px;
-    line-height:100px;    
-}
-.navbar-header a {
-    padding:0 15px;
-    line-height:100px;    
-}
-
-.dropdown {
-	font-size: 23px;
-}
-
-.dropdown-menu > li > a {
-	font-size: 20px;
-	line-height: 45px;	
-}
-
-
-
-.social-youtube {	
-	width: 80px;
-	height: 60px;
-	display: inline-block;
-	background: transparent url(../media/nucleo-social-icons/social-youtube.svg) center no-repeat;
-	background-size: 80px 60px;
-	line-height: 100px;
-	vertical-align: middle;		
-}
-
-.social-youtube:hover {
-	background: transparent url(../media/nucleo-social-icons/svg/social-1_logo-youtube.svg) center no-repeat;
-	background-size: 80px 60px;
-}
-
-.social-facebook {
-	width: 80px;
-	height: 60px;
-	display: inline-block;
-	background: transparent url(../media/nucleo-social-icons/social-facebook.svg) center no-repeat;
-	background-size: 80px 60px;
-	line-height: 100px;
-	vertical-align: middle;	
-}
-
-.social-facebook:hover {
-	background: transparent url(../media/nucleo-social-icons/svg/social-1_logo-facebook.svg) center no-repeat;
-	background-size: 80px 60px;	
-}
-
-.social-twitter {
-	width: 80px;
-	height: 60px;
-	display: inline-block;
-	background: transparent url(../media/nucleo-social-icons/social-twitter.svg) center no-repeat;
-	background-size: 80px 60px;
-	line-height: 100px;
-	vertical-align: middle;	
-}
-
-.social-twitter:hover {
-	background: transparent url(../media/nucleo-social-icons/svg/social-1_logo-twitter.svg) center no-repeat;
-	background-size: 80px 60px;	
-}*/
-
-
-
 
 .navbar {
 	min-height: 70px;
@@ -129,8 +45,6 @@ body:after {
     line-height:75px;    
 }
 
-
-
 .dropdown {
 	font-size: 20px;
 }
@@ -145,20 +59,19 @@ body:after {
 	padding: 0 10px;
 }
 
-
 .social-youtube {
 	width: 70px;
 	height: 50px;
 	display: inline-block;
 	background: transparent url(../media/nucleo-social-icons/social-youtube.svg) center no-repeat;
-	background-size: 70px 50px;
+	background-size: contain;
 	line-height: 70px;
 	vertical-align: middle;	
 }
 
 .social-youtube:hover {
 	background: transparent url(../media/nucleo-social-icons/svg/social-1_logo-youtube.svg) center no-repeat;
-	background-size: 70px 50px;
+	background-size: contain;
 }
 
 .social-facebook {
@@ -166,14 +79,14 @@ body:after {
 	height: 50px;
 	display: inline-block;
 	background: transparent url(../media/nucleo-social-icons/social-facebook.svg) center no-repeat;
-	background-size: 70px 50px;
+	background-size: contain;
 	line-height: 70px;
 	vertical-align: middle;	
 }
 
 .social-facebook:hover {
 	background: transparent url(../media/nucleo-social-icons/svg/social-1_logo-facebook.svg) center no-repeat;
-	background-size: 70px 50px;	
+	background-size: contain;	
 }
 
 .social-twitter {
@@ -181,21 +94,19 @@ body:after {
 	height: 50px;
 	display: inline-block;
 	background: transparent url(../media/nucleo-social-icons/social-twitter.svg) center no-repeat;
-	background-size: 70px 50px;
+	background-size: contain;
 	line-height: 70px;
 	vertical-align: middle;	
 }
 
 .social-twitter:hover {
 	background: transparent url(../media/nucleo-social-icons/svg/social-1_logo-twitter.svg) center no-repeat;
-	background-size: 70px 50px;	
+	background-size: contain;	
 }
 
-
-
 .cover {
-	 background-image: url('../media/stock-photos/people-in-cubicles.jpg');
-	background-size: cover;
+  background-image: url('../media/stock-photos/people-in-cubicles.jpg');
+  background-size: cover;
   background-position: 60% 90%;  /* (60% 90%)  (60% 50%)*/
   background-attachment: fixed;
   min-height: calc(100vh - 325px); /* 180px, 220px, 400px*/
@@ -206,18 +117,10 @@ body:after {
 .cover-overlay {
 	font-family: 'Raleway', sans-serif;
 	font-weight: 100;
-
-/*		display: inline-block;*/
-/*	margin: 35vh auto 15vh auto;*/
-position: relative;
-top: calc(20vh + 75px);
-/*min-height: calc(100vh - 400px);*/
-width: 52vw;  /*50vw*/
-height: auto;
-/*	z-index: 2;*/
-	/*padding: 40px 20px;*/
-/*	padding: 0 20px;*/
-	/*background: linear-gradient(to right, rgba(249, 249, 249, .6) 85%, rgba(249, 249, 249, 0));*/  /*background: linear-gradient(to right, rgba(249, 249, 249, .6) 70%, rgba(249, 249, 249, 0));*/
+	position: relative;
+	top: calc(20vh + 75px);
+	width: 52vw;  /*50vw*/
+	height: auto;
 	background: linear-gradient(to right, rgba(150, 104, 73, .85) 85%, rgba(113, 52, 23, 0));
 }
 
@@ -232,18 +135,16 @@ height: auto;
 }
 
 .body-content {
-background-color: #f8f8f8;
+	background-color: #f8f8f8;
 	margin-top: 0;
 	margin: 0;
 /*	width: 100vw;*/
 }
 
 
-
 /******************************
       Featured Thumbs
 /*******************************/
-
 
 .featured-row {
   height: 100%;
@@ -293,7 +194,7 @@ background-color: #f8f8f8;
 
 .large-font {
 	font-size: 10em; /* 15em */
-text-align: center;
+	text-align: center;
 /*margin-top: 50px;*/
 /*margin-bottom: 200px;*/
 }
@@ -312,8 +213,6 @@ text-align: center;
 }*/
 
 
-
-
 /******************************
           Slick Carousel
 /*******************************/
@@ -325,7 +224,6 @@ text-align: center;
   padding-bottom: 70px;
   /*  background-image: linear-gradient(transparent 20%, lightgray, white);*/
 }
-
 
 .slides {
   margin: 0 auto 40px;
@@ -435,35 +333,63 @@ text-align: center;
 	width: 250px;
 }
 
-@media (max-width: 802px) {
-	.social-youtube, .social-facebook, .social-twitter {
-		display: none;
+
+@media (min-width: 768px) and (max-width: 802px) {
+	.social-youtube {
+	margin: 0 -5px 0 -5px;
+	width: 70px;
+	height: 50px;
+	display: inline-block;
+	background: transparent url(../media/nucleo-social-icons/social-youtube.svg) center no-repeat;
+	background-size: contain;
+	line-height: 70px;
+	vertical-align: middle;	
+	}
+
+	.social-facebook {
+		margin: 0 -5px 0 -10px;
+		width: 70px;
+		height: 50px;
+		display: inline-block;
+		background: transparent url(../media/nucleo-social-icons/social-facebook.svg) center no-repeat;
+		background-size: contain;
+		line-height: 70px;
+		vertical-align: middle;	
+	}
+
+	.social-twitter {
+		margin: 0 -5px 0 -10px;
+		width: 70px;
+		height: 50px;
+		display: inline-block;
+		background: transparent url(../media/nucleo-social-icons/social-twitter.svg) center no-repeat;
+		background-size: contain;
+		line-height: 70px;
+		vertical-align: middle;	
 	}
 }
 
 @media (max-width: 767px) {
 	nav.navbar {
-		height: 75px;
+		min-height: 75px;
+	}
+
+	.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+	    margin-top: 20px;
 	}
 }
 
 @media (max-width: 516px) {
+	.navbar-logo {
+		display: none !important;
+	}
 
-.navbar-logo {
-	display: none !important;
+	.navbar-brand {
+		font-size: 55px;
+	}
 }
 
-.navbar-brand {
-	font-size: 55px;
-}
-
-
-
-}
-
-
-/* enables nav hover dropdown (but disables it on mobile devices, which is necessary) */
-@media (min-width: 979px) {
+@media (min-width: 979px) {		/* enables nav hover dropdown (but disables it on mobile devices, which is necessary) */
   ul.nav li.dropdown:hover > ul.dropdown-menu {
     display: block;
   }
